<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/from"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/from"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"/>

            <EditText
                android:id="@+id/fromText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/fromHint"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/colorGrey"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_below="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/to"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/to"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"/>

            <EditText
                android:id="@+id/toText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/toHint"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/colorGrey"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_below="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/cc"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/cc"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"/>

            <EditText
                android:id="@+id/ccText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/ccHint"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/colorGrey"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_below="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/bcc"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/bcc"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"/>

            <EditText
                android:id="@+id/bccText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/bccHint"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/colorGrey"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_below="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/subject"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/subject"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"/>

            <EditText
                android:id="@+id/subjectText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/subjectHint"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorGrey"
                android:inputType="text"/>

        </LinearLayout>

        <TextView
            android:id="@+id/message"
            android:layout_below="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/message"
            android:textSize="14sp"
            android:textColor="@color/colorBlack"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/messageText"
            android:layout_below="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/messageHint"
            android:textSize="14sp"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorGrey"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"/>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_below="@+id/messageText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/clearButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                android:textSize="14sp"
                android:layout_marginStart="50dp"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/colorWhite"/>

            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/previewButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/preview"
                android:textSize="14sp"
                android:layout_marginEnd="50dp"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>

        <TextView
            android:id="@+id/develop"
            android:layout_below="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/ZYR"
            android:textSize="12sp"
            android:textAlignment="center"/>
    </RelativeLayout>
</ScrollView>